--- a/index.html
+++ b/index.html
@@ -5,12 +5,43 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="./script.js"></script>
+  <link rel="stylesheet" href="./styles.css">
+  <script src="./script.js" defer></script>
   <title>Calculator</title>
 </head>
 
 <body>
+  <main>
+    <div class="calculator">
+      <div class="display">
+        <p>0</p>
+      </div>
+      <div class="btn-grid">
+        <button class="btn clear">AC</button>
+        <button class="btn delete">DEL</button>
+        <button class="btn">7</button>
+        <button class="btn">8</button>
+        <button class="btn">9</button>
+        <button class="btn">÷</button>
+        <button class="btn">4</button>
+        <button class="btn">5</button>
+        <button class="btn">6</button>
+        <button class="btn">×</button>
+        <button class="btn">1</button>
+        <button class="btn">2</button>
+        <button class="btn">3</button>
+        <button class="btn">-</button>
+        <button class="btn">.</button>
+        <button class="btn">0</button>
+        <button class="btn">=</button>
+        <button class="btn">+</button>
+      </div>
+    </div>
+  </main>
 
+  <footer>
+    <p>Copyright © Kyle Paxton 2022</p>
+  </footer>
 </body>
 
 </html>
