--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <p>0</p>
       </div>
       <div class="btn-grid">
-        <button class="btn clear">AC</button>
-        <button class="btn delete">DEL</button>
+        <button class="btn btn-clear">AC</button>
+        <button class="btn btn-delete">DEL</button>
         <button class="btn">7</button>
         <button class="btn">8</button>
         <button class="btn">9</button>
