--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles.css">
   <script src="./script.js" defer></script>
   <title>Calculator</title>
@@ -22,19 +25,19 @@
         <button class="btn">7</button>
         <button class="btn">8</button>
         <button class="btn">9</button>
-        <button class="btn">÷</button>
+        <button class="btn btn-accent">÷</button>
         <button class="btn">4</button>
         <button class="btn">5</button>
         <button class="btn">6</button>
-        <button class="btn">×</button>
+        <button class="btn btn-accent">×</button>
         <button class="btn">1</button>
         <button class="btn">2</button>
         <button class="btn">3</button>
-        <button class="btn">-</button>
+        <button class="btn btn-accent">-</button>
         <button class="btn">.</button>
         <button class="btn">0</button>
         <button class="btn">=</button>
-        <button class="btn">+</button>
+        <button class="btn btn-accent">+</button>
       </div>
     </div>
   </main>
