calc display working

--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
   <main>
     <div class="calculator">
       <div class="display">
-        <p>0</p>
+        <p id="display-numbers" maxlength="8">0</p>
       </div>
       <div class="btn-grid">
         <button class="btn btn-clear">AC</button>
         <button class="btn btn-delete">DEL</button>
-        <button class="btn">7</button>
-        <button class="btn">8</button>
-        <button class="btn">9</button>
+        <button class="btn" id="btn-num">7</button>
+        <button class="btn" id="btn-num">8</button>
+        <button class="btn" id="btn-num">9</button>
         <button class="btn btn-accent">÷</button>
-        <button class="btn">4</button>
-        <button class="btn">5</button>
-        <button class="btn">6</button>
+        <button class="btn" id="btn-num">4</button>
+        <button class="btn" id="btn-num">5</button>
+        <button class="btn" id="btn-num">6</button>
         <button class="btn btn-accent">×</button>
-        <button class="btn">1</button>
-        <button class="btn">2</button>
-        <button class="btn">3</button>
+        <button class="btn" id="btn-num">1</button>
+        <button class="btn" id="btn-num">2</button>
+        <button class="btn" id="btn-num">3</button>
         <button class="btn btn-accent">-</button>
         <button class="btn">.</button>
-        <button class="btn">0</button>
+        <button class="btn" id="btn-num">0</button>
         <button class="btn">=</button>
         <button class="btn btn-accent">+</button>
       </div>
