input functions working somewhat
needed: update the returned value to displayed value

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <main>
     <div class="calculator">
       <div class="display">
-        <p id="display-numbers" maxlength="8">0</p>
+        <p id="display-numbers">0</p>
       </div>
       <div class="btn-grid">
         <button class="btn btn-clear">AC</button>
@@ -25,19 +25,19 @@
         <button class="btn" id="btn-num">7</button>
         <button class="btn" id="btn-num">8</button>
         <button class="btn" id="btn-num">9</button>
-        <button class="btn btn-accent">÷</button>
+        <button class="btn btn-accent btn-operator">÷</button>
         <button class="btn" id="btn-num">4</button>
         <button class="btn" id="btn-num">5</button>
         <button class="btn" id="btn-num">6</button>
-        <button class="btn btn-accent">×</button>
+        <button class="btn btn-accent btn-operator">×</button>
         <button class="btn" id="btn-num">1</button>
         <button class="btn" id="btn-num">2</button>
         <button class="btn" id="btn-num">3</button>
-        <button class="btn btn-accent">-</button>
+        <button class="btn btn-accent btn-operator">-</button>
         <button class="btn">.</button>
         <button class="btn" id="btn-num">0</button>
-        <button class="btn">=</button>
-        <button class="btn btn-accent">+</button>
+        <button class="btn btn-equals">=</button>
+        <button class="btn btn-accent btn-operator">+</button>
       </div>
     </div>
   </main>
