decimal added but not working

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <button class="btn" id="btn-num">2</button>
         <button class="btn" id="btn-num">3</button>
         <button class="btn btn-accent btn-operator">-</button>
-        <button class="btn">.</button>
+        <button class="btn decimal" id="btn-num">.</button>
         <button class="btn" id="btn-num">0</button>
         <button class="btn btn-equals">=</button>
         <button class="btn btn-accent btn-operator">+</button>
