--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles.css">
+  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
   <script src="./script.js" defer></script>
   <title>Calculator</title>
 </head>
